--- a/TareaTest/TareaTest.csproj
+++ b/TareaTest/TareaTest.csproj
@@ -48,6 +48,27 @@
   <ItemGroup>
     <Compile Include="BLL\IRepository.cs" />
     <Compile Include="BLL\RepositorioBase.cs" />
+    <Compile Include="Entidades\Cargos.cs" />
+    <Compile Include="Entidades\Categorias.cs" />
+    <Compile Include="Entidades\Clientes.cs" />
+    <Compile Include="Entidades\Compras.cs" />
+    <Compile Include="Entidades\DetalleCompras.cs" />
+    <Compile Include="Entidades\DetalleVenta.cs" />
+    <Compile Include="Entidades\Empleados.cs" />
+    <Compile Include="Entidades\Estados.cs" />
+    <Compile Include="Entidades\Imagenes.cs" />
+    <Compile Include="Entidades\Marcas.cs" />
+    <Compile Include="Entidades\Modelos.cs" />
+    <Compile Include="Entidades\Permisos.cs" />
+    <Compile Include="Entidades\Personas.cs" />
+    <Compile Include="Entidades\Productos.cs" />
+    <Compile Include="Entidades\Provedores.cs" />
+    <Compile Include="Entidades\TipoComprobantes.cs" />
+    <Compile Include="Entidades\TipoPersonas.cs" />
+    <Compile Include="Entidades\UnidadMedida.cs" />
+    <Compile Include="Entidades\Usuarios.cs" />
+    <Compile Include="Entidades\Usuario_has_permiso.cs" />
+    <Compile Include="Entidades\Ventas.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -78,8 +99,6 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Entidades\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
